# rfcc

./: .gitignore  README.md  conftest.py  example.py  pyproject.toml  pytest.ini  requirements.txt
rfcc/: __init__.py  data_ops.py  model.py  path_ops.py  rfcc.py
tests/: example.py  outliers.py  std.py  test_data_ops.py  test_rfcc.py
