[tool.poetry]
name = "rfcc"
version = "1.00"
description = "Python RFCC - Data understanding, clustering and outlier detection for regression and classification tasks"
authors = ["Ingo Marquart, Ebru Koca Marquart"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
pydata = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
